--- a/HTML/UQAC/accueil.html
+++ b/HTML/UQAC/accueil.html
@@ -1,16 +1,11 @@
-<html>
-  
-  <head>
+<html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
-    rel="stylesheet" type="text/css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="uqac.css" rel="stylesheet" type="text/css">
-  </head>
-  
-  <body>
+  </head><body>
     <div class="container">
       <nav class="navbar navbar-inverse">
         <div class="navbar-header">
@@ -141,8 +136,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-              aria-expanded="false">Pearson, Patrick <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pearson, Patrick <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li>
                   <a href="#">Modification du mot de passe</a>
@@ -219,7 +213,7 @@
               <br>sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
               <br>Ut enim ad minim veniam, quis nostrud</p>
           </div>
-          <div class="col-md-6 hidden-md text-right">
+          <div class="col-md-6 hidden-md text-right" id="cours">
             <ol class="list-unstyled text-primary text-right" id="menu">
               <li>Cours actif</li>
               <li>Dossier d'admission</li>
@@ -275,6 +269,6 @@
         </div>
       </div>
     </footer>
-  </body>
+  
 
-</html>
+</body></html>
